<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plainV_country"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration">

    <TextView
        android:id="@+id/txtV_regis_page"
        android:layout_width="181dp"
        android:layout_height="55dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="60dp"
        android:text="@string/registration_form"
        android:textAlignment="center"
        android:textColor="#0683BC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTxt_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxt_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="-18dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="@string/name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#1C1C1C"
        app:layout_constraintBottom_toTopOf="@+id/editT_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtV_regis_page" />

    <EditText
        android:id="@+id/editT_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPersonName"
        android:isScrollContainer="false"
        android:justificationMode="none"
        android:minHeight="48dp"
        android:pointerIcon="no_drop"
        android:textColor="#202020"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editT_Phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editT_surname" />

    <EditText
        android:id="@+id/editT_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#232323"
        app:layout_constraintBottom_toTopOf="@+id/txtV_Pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editT_Phone" />

    <EditText
        android:id="@+id/txtV_Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="170dp"
        android:duplicateParentState="true"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textPassword|numberPassword"
        android:minHeight="48dp"
        android:textColor="#101010"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editT_email" />

    <EditText
        android:id="@+id/editT_PassConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="7dp"
        android:autofillHints=""
        android:defaultFocusHighlightEnabled="false"
        android:duplicateParentState="true"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="none|textVisiblePassword|textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/btn_Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtV_Pass" />

    <EditText
        android:id="@+id/editT_Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="28dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColor="#101010"
        android:textColorHint="#6A6868"
        app:layout_constraintBottom_toTopOf="@+id/editT_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editT_country" />

    <Button
        android:id="@+id/btn_Submit"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#036DC1"
        android:text="@string/submit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editT_PassConf"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editT_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@android:string/autofill"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#3A3A3A"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editT_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxt_Name" />

</androidx.constraintlayout.widget.ConstraintLayout>